--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "everest-engineering",
+  "name": "everest",
   "version": "1.0.0",
-  "description": "",
+  "description": "A project for everest engineering",
   "main": "./lib/index.js",
+  "repository": "https://github.com/sudo-satish/ts-cli-everest-engineering",
   "bin": {
     "everest": "./lib/index.js"
   },
@@ -13,7 +14,7 @@
     "build": "tsc -p .",
     "local": "sudo npm i -g && everest",
     "refresh": "rm -rf ./node_modules ./package-lock.json && npm install",
-    "test": "echo 'test'"
+    "test": "jest"
   },
   "author": "Satish",
   "license": "ISC",
@@ -29,8 +30,11 @@
     "@types/clear": "^0.1.2",
     "@types/figlet": "^1.5.4",
     "@types/inquirer": "^8.2.1",
+    "@types/jest": "^28.1.1",
     "@types/node": "^18.0.0",
+    "jest": "^28.1.1",
     "nodemon": "^2.0.16",
+    "ts-jest": "^28.0.5",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
   }
